Usando Pseudos-Classes, Pseudos-Elementos

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -8,15 +8,15 @@
     <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
 
-<body>
-    <input type="checkbox" checked> 
-    <input type="checkbox">
-<h1 class="heading" meu-atributo="valor1 valor 2 valor 3">Lorem</h1>
-<p class="p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque reprehenderit incidunt repellendus delectus, maxime aspernatur laborum autem, veritatis sint quas sapiente dicta, eligendi corporis officia nobis quae voluptates quasi minima!</p>
-<p class="p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque reprehenderit incidunt repellendus delectus, maxime aspernatur laborum autem, veritatis sint quas sapiente dicta, eligendi corporis officia nobis quae voluptates quasi minima!</p> 
-<h1 class="heading">Lorem</h1>
-<p class="p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque reprehenderit incidunt repellendus delectus, maxime aspernatur laborum autem, veritatis sint quas sapiente dicta, eligendi corporis officia nobis quae voluptates quasi minima!</p>
-<p class="p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque reprehenderit incidunt repellendus delectus, maxime aspernatur laborum autem, veritatis sint quas sapiente dicta, eligendi corporis officia nobis quae voluptates quasi minima!</p> 
+<body id="b" class="bclass">
+<p class="p" id="p" style="background: red;">Lorem ipsum dolor 
+    sit amet consectetur adipisicinga
+     elit. Nulla, dolorem porro quae
+      aperiam maxime voluptatem
+       provident reiciendiDs consequuntur 
+       voluptas illo necessitatibus hic, incidunt nemo odit alias corrupti iure labore quibusdam.
+
+</p>
 </body>
 
 </html>
