--- a/HTML/index.html
+++ b/HTML/index.html
@@ -8,15 +8,30 @@
     <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
 
-<body id="b" class="bclass">
-<p class="p" id="p" style="background: red;">Lorem ipsum dolor 
-    sit amet consectetur adipisicinga
-     elit. Nulla, dolorem porro quae
-      aperiam maxime voluptatem
-       provident reiciendiDs consequuntur 
-       voluptas illo necessitatibus hic, incidunt nemo odit alias corrupti iure labore quibusdam.
-
-</p>
+<body>
+    <div class="grid">
+        <div class="col">
+            <div class="col-content">Conteúdo</div>
+        </div>
+        <div class="col">
+            <div class="col-content">Conteúdo</div>
+        </div>
+        <div class="col">
+            <div class="col-content">Conteúdo</div>
+        </div>
+        <div class="col">
+            <div class="col-content">Conteúdo</div>
+        </div>
+        <div class="col">
+            <div class="col-content">Conteúdo</div>
+        </div>
+        <div class="col">
+            <div class="col-content">Conteúdo</div>
+        </div>
+    </div>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, iste architecto repellat, ipsam adipisci
+        voluptate vel rem impedit dolor, mollitia illo eveniet laborum nulla perspiciatis animi neque cupiditate ipsa
+        totam?</p>
 </body>
 
 </html>
