Float, Border-radius, Posicionamento E Media queries e breakpoints

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -9,33 +9,60 @@
 </head>
 
 <body>
-      <a href="#One">One</a>
-      <a href="#Two">Two</a>
-      <a href="#Therre">Therre</a>
-
-    <div class="pai" id="One">
-        <div></div>
-        <br>
-    <p>
-
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Similique voluptate dolorem dignissimos fuga repellat
-        mollitia? Nihil porro doloribus deserunt vero iusto earum quasi maxime vitae saepe, voluptates dolores suscipit
-        eius.
-    </p>
+    <nav class="menu">
+        <ul>
+            <li><a href="#Home">Home</a></li>
+            <li><a href="#full-page">Full page</a></li>
+        </ul>
+    </nav>
+    <div class="grid">
+        <div class="col" id="Home">
+            <div class="col-content"></div>
+        </div>
+        <div class="col">
+            <div class="col-content"></div>
+        </div>
+        <div class="col">
+            <div class="col-content"></div>
+        </div>
+        <div class="col">
+            <div class="col-content"></div>
+        </div>
+        <div class="col">
+            <div class="col-content"></div>
+        </div>
+        <div class="col">
+            <div class="col-content"></div>
+        </div>
+            <div class="col">
+            <div class="col-content"></div>
+        </div>
+        <div class="col">
+            <div class="col-content"></div>
+        </div>
+        <div class="col">
+            <div class="col-content"></div>
+        </div>
+        <div class="col">
+            <div class="col-content"></div>
+        </div>
+        <div class="col">
+            <div class="col-content"></div>
+        </div>
+        <div class="col">
+            <div class="col-content"></div>
+        </div>
     </div>
-      <div class="pai color-one" id="Two">
-    <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Similique voluptate dolorem dignissimos fuga repellat
-        mollitia? Nihil porro doloribus deserunt vero iusto earum quasi maxime vitae saepe, voluptates dolores suscipit
-        eius.
-    </p>
-    </div>
-      <div class="pai color-two" id="Therre">
-    <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Similique voluptate dolorem dignissimos fuga repellat
-        mollitia? Nihil porro doloribus deserunt vero iusto earum quasi maxime vitae saepe, voluptates dolores suscipit
-        eius.
-    </p>
+     <section id="full-page" class="full-page">
+        <div class="full-page-content"></div>
+        <h1>Lorem Ipsum</h1>
+
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil, nulla officia nisi necessitatibus veritatis
+            aspernatur quibusdam odit nesciunt possimus corrupti nemo repellendus debitis culpa provident velit eaque
+            voluptatum totam. Dignissimos.</p>
+
+            </section>
+
     </div>
 </body>
 
