--- a/HTML/index.html
+++ b/HTML/index.html
@@ -9,60 +9,22 @@
 </head>
 
 <body>
-    <nav class="menu">
-        <ul>
-            <li><a href="#Home">Home</a></li>
-            <li><a href="#full-page">Full page</a></li>
-        </ul>
-    </nav>
-    <div class="grid">
-        <div class="col" id="Home">
-            <div class="col-content"></div>
+    <div class="two-columns">
+        <div class="col">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio, iure rem ipsam id quaerat voluptatum
+                eaque asperiores unde quidem nesciunt in aliquid saepe libero ullam ea similique dolor qui alias.</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio, iure rem ipsam id quaerat voluptatum
+                eaque asperiores unde quidem nesciunt in aliquid saepe libero ullam ea similique dolor qui alias.</p>
         </div>
         <div class="col">
-            <div class="col-content"></div>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio, iure rem ipsam id quaerat voluptatum
+                eaque asperiores unde quidem nesciunt in aliquid saepe libero ullam ea similique dolor qui alias.</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio, iure rem ipsam id quaerat voluptatum
+                eaque asperiores unde quidem nesciunt in aliquid saepe libero ullam ea similique dolor qui alias.</p>
         </div>
-        <div class="col">
-            <div class="col-content"></div>
+        <div class="gallery">
+            <div class="img"></div>
         </div>
-        <div class="col">
-            <div class="col-content"></div>
-        </div>
-        <div class="col">
-            <div class="col-content"></div>
-        </div>
-        <div class="col">
-            <div class="col-content"></div>
-        </div>
-            <div class="col">
-            <div class="col-content"></div>
-        </div>
-        <div class="col">
-            <div class="col-content"></div>
-        </div>
-        <div class="col">
-            <div class="col-content"></div>
-        </div>
-        <div class="col">
-            <div class="col-content"></div>
-        </div>
-        <div class="col">
-            <div class="col-content"></div>
-        </div>
-        <div class="col">
-            <div class="col-content"></div>
-        </div>
-    </div>
-     <section id="full-page" class="full-page">
-        <div class="full-page-content"></div>
-        <h1>Lorem Ipsum</h1>
-
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil, nulla officia nisi necessitatibus veritatis
-            aspernatur quibusdam odit nesciunt possimus corrupti nemo repellendus debitis culpa provident velit eaque
-            voluptatum totam. Dignissimos.</p>
-
-            </section>
-
     </div>
 </body>
 
