--- a/HTML/index.html
+++ b/HTML/index.html
@@ -9,21 +9,42 @@
 </head>
 
 <body>
-    <div class="two-columns">
-        <div class="col">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio, iure rem ipsam id quaerat voluptatum
-                eaque asperiores unde quidem nesciunt in aliquid saepe libero ullam ea similique dolor qui alias.</p>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio, iure rem ipsam id quaerat voluptatum
-                eaque asperiores unde quidem nesciunt in aliquid saepe libero ullam ea similique dolor qui alias.</p>
-        </div>
-        <div class="col">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio, iure rem ipsam id quaerat voluptatum
-                eaque asperiores unde quidem nesciunt in aliquid saepe libero ullam ea similique dolor qui alias.</p>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio, iure rem ipsam id quaerat voluptatum
-                eaque asperiores unde quidem nesciunt in aliquid saepe libero ullam ea similique dolor qui alias.</p>
-        </div>
-        <div class="gallery">
-            <div class="img"></div>
+    <div class="container">
+        <div class="grid">
+            <div>
+                <h1>Logo</h1>
+                <nav>Menu</nav>
+            </div>
+            <div>
+                <nav>
+                    <ul>
+                        <li>Item 1</li>
+                        <li>Item 2</li>
+                        <li>Item 3</li>
+                        <li>Item 4</li>
+                        <li>Item 5</li>
+                        <li>Item 6</li>
+                    </ul>
+                </nav>
+            </div>
+            <div>
+                <h1>Olá Mundo!</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi provident temporibus odio
+                    consequuntur ipsam consectetur nesciunt, animi, architecto quidem est autem et nisi at ad
+                    dignissimos assumenda mollitia, quae amet?</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi provident temporibus odio
+                    consequuntur ipsam consectetur nesciunt, animi, architecto quidem est autem et nisi at ad
+                    dignissimos assumenda mollitia, quae amet?</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi provident temporibus odio
+                    consequuntur ipsam consectetur nesciunt, animi, architecto quidem est autem et nisi at ad
+                    dignissimos assumenda mollitia, quae amet?</p>
+                    
+            </div>
+            <div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi provident temporibus odio
+                    consequuntur ipsam consectetur nesciunt, animi, architecto quidem est autem et nisi at ad
+                    dignissimos assumenda mollitia, quae amet?</p>
+            </div>
         </div>
     </div>
 </body>
